# dummy-nilfgaard-crypto

./: README.md  pyproject.toml
.github/workflows/: release.yml
nilfgaard_crypto/: utils.py
