[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nilfgaard_crypto/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "nilfgaard_crypto/*"
]

[project]
name = "nilfgaard_crypto"
description = "Dummy Nilfgaard Crypto Library"
readme = "README.md"
dynamic = ["version"]
requires-python = "==3.11.*"
dependencies = [
]
authors = [
    { name = "Gorq", email = "gorq@gmail.com" },
]
keywords = ["gorq", "nilfgaard-crypto"]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/murinmat/dummy-nilfgaard-crypto"
Repository = "https://github.com/murinmat/dummy-nilfgaard-crypto"